  * --devices option for wodim (modeled after cdrskin's output)
  * clear profile names printing (using code from libburnia)
  * cleanup with unused embedded CVS revision strings from Schilling and
    more gcc -Wall correctness
  * reenabled -format functionality (bug in program function control flow)
  * get maximum DMA buffer size from sysfs on Linux, where possible

  [ Thomas Schmidt ]
  * workaround for older libmagic API

  [ Peter Samuelson ]
  * expand where genisoimage looks for the config file - same places
    mkisofs looks plus a few more.  (We may wish to trim this back some.)
  * major cleanups to genisoimage.1 manpage; split out the part about
    .genisoimagerc to a new page genisoimagerc.5.

 -- Eduard Bloch <blade@debian.org>  Sat,  2 Dec 2006 23:05:33 +0100

cdrkit (1.1.0) RELEASED; urgency=medium

  [ Eduard Bloch ]
  * replacement of libdeflt, config parser rewrite; more user-friendly,
    more flexible/tolerant now
  * config overhaul, much more dynamic checks, including fixes for SunOS and
    AIX environment, including proper libiconv detection, and processing of
    LDFLAGS provided by user. Also fixed confusing double-checks for some of
    the variables in cdda2wav.c.
  * mass renaming of applications and libraries, see FAQ
  * dirsplit -S fix, oversized have been possible before
  * consistent version display
  * cleanup of libschily, removed unused/superfluous parts (assumed having a
    modern POSIX compliant environment). Renamed to librols
    (RemainsOfLibSchily).
  * reenabled selection of the DVD driver, accidentaly disabled in 1.0, when
    beeing in non-verbose mode
  * made dirsplit work with file symlinks
  * incorporated some OpenSUSE patches:
    + cdrkit-HZ.patch (with initialized value, *sic*)
    + cdrkit-dvd-fix.patch (return code tracking)
    + cdrkit-gcc-workaround.patch
    + cdrkit-mkisofs-fail-on-large-file.patch (don't just skip them)
    + cdrkit-mkisofs-grow-check.patch (tolerate grown files)